安装全新的Ubuntu安装的软件

--- a/2020-03-27.md
+++ b/2020-03-27.md
@@ -34,5 +34,6 @@
     100000 rows affected (12.43 sec)
     1000000 rows affected (4 min 25.29 sec)
     1000000 rows affected (4 min 33.30 sec)
-
+    2000000 rows affected (10 min 20.78 sec)
+    5000000 rows affected (35 min 8.08 sec) 
 #### 7，以下是在mysql_5.6版本，一个表会大量插入，大量查询时进行删除操作时执行的。
