仓库文件结构整理，红帽学习笔记上传

--- a/2020-03-27.md
+++ b/2020-03-27.md
@@ -26,8 +26,8 @@
     如果state字段显示的是query end 并持续很长时间则代表事务出现了问题
 
 #### 5. 查看delete 语句执行的事务
-	SELECT * where trx_mysql_thread_id = process_id;
- 
+        select trx_weight from information_schema.innodb_trx where trx_mysql_thread_id = 566708; 
+	当trx_weight 接近0的时候 代表事务回滚成功 
 
 #### 6. 分批次删除数据
     预估要查询的数据总数，然后分批次进行删除 
