--- a/REDHOT/RH124-6.md
+++ b/REDHOT/RH124-6.md
@@ -11,12 +11,7 @@ getent shdow tom
 #  common/${}  先执行 ${}里面的命令 再执行外面的命令
 
 Id 查看用户的信息
-Awk  文本分析工具 pricessing  language
-Du
-Tail	
-Head
-Less
-More
+
 
 
 vi 
@@ -36,6 +31,13 @@ vi
     :set paste 把文件内容粘贴 不改变文件内容的格式
     crul+r 前进 是u 键相反的功能
     r 替换一个字符 R 一直在替换模式
+    # vim 操作
+    ## n + 空格 在当前行中移动n个字符
+    ## n + enter 向下移动n行
+    ## d$ 删除光标所在处到该行的最后一个字符
+    ## d0 删除光标所在处到该行的第一个字符
+    ## y$ 光标所在列到改行的最后一个字符 
+    ## y0 复制光标所在处到该行的第一个字符
     
 useradd tom 添加一个tom的用户 
 useradd 方法什么参数都不加，则使用默认配置文件/etc/default/useradd
