--- a/REDHOT/RH134/RH134-1.md
+++ b/REDHOT/RH134/RH134-1.md
@@ -25,12 +25,30 @@
 	grep  r?t #. 匹配r0次或一次 t rt
 	grep  r+t #. 匹配r 1次或多次次 rt rrt
 	grep  r*t #. 匹配r 0次或多次。t rt rrt
+	grep  r{0,7} 匹配0次或者到7此 r，rr，rrr。。。
 	
+	fu(?!.) == fu$ == fu(?!\W) 匹配已fu结尾的字符串
+### linux 文本三剑客 awk sed grep
+	sed 
+    -i 保存文件
+	-i.bak 保存文件并留一个备份
+	-r 使用复杂的正则匹配
+	sed -i.bak -r s/old/new/g
+	示例： sed -i.back -r s/(.+PW)=[0-9a-z]+/\1=redhot/g #将等于号后面的的值变成redhot
 ## 问题 
 	懒惰匹配？
+	答：当?后面跟随+,.,* 的时候匹配最少的次数	
+
 	贪婪匹配？
+	答：+,.,*尽可能匹配最多的次数
+
 	grep 和 egrep的区别
 	答: grep 匹配简单的正则符号，egrep匹配复杂的正则符号
+
+	把var/log/message的所有ip找出来
+	答：egrep '(\d{1,3}\.){3}\d{1,3}' /var/log/wifi.log
+## 正则表达式练习
+	https://alf.nu/RegexGolf#accesstoken=domS/zNqeFwoZLqEWl7Y
 
 
 	
