--- a/REDHOT/RH134/RH134-1-2.md
+++ b/REDHOT/RH134/RH134-1-2.md
@@ -15,3 +15,24 @@
 ## 一些简单的命令
 	basename /User/baowendong #返回值是baowendong
 	dirname /User/baowendong  #返回值是/User/
+
+
+## 返回值
+	echo $? #查看命令的返回值  当返回值为0代表正确，返回值不等于0则错误
+
+##  运算
+	echo $[1+1] #输出2	
+	echo $[1*1] #输出1	
+	echo $[1**1] #输出1 等于1的1次方	
+
+## 	其他
+	
+	ping c1 192.168.1.106 #ping 192.168.1.106一次
+
+	who #查看当前谁在线
+
+	systemctl is-active vsfptd #centos centos下判断ftp服务是否启动
+
+	systemctl start vsfptd #centos centos启动ftp服务
+
+	yum remove vsftod -y #删除ftp包 并且不询问
