--- a/REDHOT/RH124-2-1.md
+++ b/REDHOT/RH124-2-1.md
@@ -1,11 +1,34 @@
 # bash的一些常用快捷键
-# 快速引用上一个命令的最后一部分
+## 光标移动
+    ctrl + a #移动到开头
+    ctrl + e #移动到结尾
+    esc + b #向左移动一个单词
+    esc + f #向右移动一个单词
+    ctrl + b #向左移动一个字符
+    ctrl + f #向右移动一个字符
+## 删除
+    ctrl + k 删除光标后所有字符
+    ctrl + u 删除光标前所有字符
+    ctrl + w 删除光标前单词
+    ctrl + d 删除光标所在字符
+    ctrl + h 删除光标前所在字符
+## 撤销
+    ctrl + _ 撤销操作
+    ctrl + y 粘贴（ctrl + k）/ （ctrl + u）删除的字符
+
+## 历史命令编辑
+    ctrl + p 上一条命令
+    ctrl + n 下一条命令
+    ctrl + r 搜索命令
+
+## 控制命令
+    ctrl + l 清空屏幕
+
+## !命令
+    !! 执行上一条命令
+    !?cd 执行上一条已cd开头的命令
+## 快速引用上一个命令的最后一部分
 esc + . 
 
-# #号后面的命令不会被调用
+## #号后面的命令不会被调用
 ls #显示当前的目录里的目录和文件
-
-# control a 跳到命令开头
-# control e 跳到命令结尾
-# control u 删除一行命令
-# control k 删除光标之后的命令
