red hot pv vg lv vdo

--- a/REDHOT/RH134/RH134-1.md
+++ b/REDHOT/RH134/RH134-1.md
@@ -9,6 +9,7 @@
 	rm -rf f[0-9] #删除 f1... f9 文件
 	rm -rf f[!0-9] #删除 除了f1... f9 文件
 	rm -rf f？ #代替任意字符
+        Ls /dev/sda{5..9} #查看sda5 sda6 sda7 sda8 sda9
 	
 	cp -a /etc/skel/.[!.]* /home/tom #把已点开头第二个字符不是点的文件copy
 
