--- a/REDHOT/RH134/RH134-1-2.md
+++ b/REDHOT/RH134/RH134-1-2.md
@@ -8,9 +8,9 @@
 	$PS1 ：提示字符
 	$HOME : 命令存放的目录
 ## 开机过程
-	1.加载home目录下的 .bash_profile
-	2.加载home目录下的 .bashrc #主要是一些别名和函数
-	3.加载/etc/目录下的  bashrc #所有用户都可以使用这个文件中设置的别名和函数
+	1.加载 [`/etc/profile`](https://github.com/MEclipse1/back/tree/master/REDHOT/RH134/centOS_profile) 文件
+    2.加载/etc/profile.d/*.sh文件
+    3.加载/etc/bashrc 文件
 
 ## 一些简单的命令
 	basename /User/baowendong #返回值是baowendong
