--- a/2020-03-27.md
+++ b/2020-03-27.md
@@ -47,3 +47,53 @@
 #### 8. 
 	mysql DB在第一次删除数据的情况下会根据索引删除数据
     如果紧接着进行第二次数据的删除不会走索引
+
+### 后来发现这个表使用了mysql的分区表
+
+#### 1.查看建表语句
+    mysql> show create table table_name \G
+    ************************** 1. row **************************
+        Table: table_name
+    Create Table: CREATE TABLE `table_name` (
+    `id` int(11) NOT NULL AUTO_INCREMENT,
+    `create_date` datetime NOT NULL,
+    `update_date` datetime DEFAULT NULL,
+    PRIMARY KEY (`id`,`create_date`),
+    ) ENGINE=InnoDB AUTO_INCREMENT=233086472 DEFAULT CHARSET=utf8 
+    /*!50100 PARTITION BY RANGE (YEAR(create_date))
+    (PARTITION p2017 VALUES LESS THAN (2017) ENGINE = InnoDB,
+    PARTITION p2018 VALUES LESS THAN (2018) ENGINE = InnoDB,
+    PARTITION p2019 VALUES LESS THAN (2019) ENGINE = InnoDB,
+    PARTITION p2020 VALUES LESS THAN (2020) ENGINE = InnoDB,
+    PARTITION p2021 VALUES LESS THAN (2021) ENGINE = InnoDB,
+    PARTITION p2022 VALUES LESS THAN (2022) ENGINE = InnoDB,
+    PARTITION p2023 VALUES LESS THAN (2023) ENGINE = InnoDB,
+    PARTITION p2024 VALUES LESS THAN (2024) ENGINE = InnoDB,
+    PARTITION p2025 VALUES LESS THAN (2025) ENGINE = InnoDB,
+    PARTITION p2026 VALUES LESS THAN (2026) ENGINE = InnoDB,
+    PARTITION p2027 VALUES LESS THAN (2027) ENGINE = InnoDB,
+    PARTITION p2028 VALUES LESS THAN (2028) ENGINE = InnoDB,
+    PARTITION p2029 VALUES LESS THAN (2029) ENGINE = InnoDB,
+    PARTITION p2030 VALUES LESS THAN (2030) ENGINE = InnoDB) */
+    1 row in set (0.00 sec)
+
+    根据sql数据不通的创建时间存入到不同的分区当中。
+exmple：
+| Id  | create_date  | date_date  | 
+|:----------|:----------|:----------
+| 1   | 2020:08:31 00:00:00   | 2020:08:31 00:00:00  | 
+
+这条数据将会存入到`p2021`分区中
+
+#### 2.删除分区
+    假设这个分区有100w条数据，根据之前执行`delete from table where id <= max_id and id >= min_id;` 的方法
+    删除这些user用户将会使用`1000000 rows affected (4 min 25.29 sec)` 时间
+
+    使用删除分区表的方法
+    ALTER TABLE t_user_push_log DROP PARTITION p2021;
+
+    Connection id:    3960726
+    Current database: db_cpon2
+    Query OK, 0 rows affected (0.59 sec)
+
+    使用0.59s删除完成了数据
