--- a/2020-07-29.md
+++ b/2020-07-29.md
@@ -75,11 +75,16 @@ Stripe\Customer JSON: {
 #### 2-2.当我在一个有域名的服务器上跑这段代码的时候，成功得到了返回值
 
 #### 3.结论
-我的服务器ip地址是`192.168.3.115`
+我的服务器ip地址是`192.168.3.115`, 网关是`192.168.3.1.`,
+网关`192.168.3.1` 的 网关是 `192.168.1.1`
 我的请求url是`http://192.168.3.115/test.php`
 `test.php` 文件会再请求 `https://api.stripe.com/v1/customers` url
 但是当`https://api.stripe.com/v1/customers` 的响应结果返回时，响应结果无法被我的服务器接收到。
 
+同样的情况还出现在，当我用`192.168.3.115`的ip去连接 `192.168.1.76`的数据库。
+如果我此时连接了vpn 就无法连接 `192.168.1.76` 的数据库
+如果我不连接vpn 就可以连接 `192.168.1.76` 的数据库
 #### 4.解决方法
 1.使用一个有公网ip的机器去进行debug调试
 2.将test.php文件当作脚本运行，不在服务器代码上跑代码。
+3.使用192.168.1.1的地址去进行debug调试
